complete capstone- 911 calls

--- a/seaborn-tutorial/seaborn2.ipynb
+++ b/seaborn-tutorial/seaborn2.ipynb
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "b767cc5b-2daa-45b8-86f8-2288087bb4bc",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,8 @@
     "    x='day', \n",
     "    y = 'tip', \n",
     "    data=tips, \n",
-    "    jitter=True #scatters points for visibilti)"
+    "    jitter=True #scatters points for visibilty\n",
+    ")"
    ]
   },
   {
